# encs-distribution-app

./: .gitignore  README.md  build.sh  cabal.project  encs-distribution-app.cabal  hie.yaml
app/: Main.hs
result/testnet-preview/: config.json  distribution.json  encs-metadata.json  encs-params.json  verified_distribution.json
src/: Main.hs
src/ENCS/: Main.hs  Opts.hs
testnet/: config.json
