cabal-version:      3.0

name:               encs-distribution-app
version:            0.1.0.0

maintainer:         encoins.crypto@ud.me

-- Plutus language settings
common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      
      -- See Plutus Tx readme
      -fno-ignore-interface-pragmas
      -fno-omit-interface-pragmas
      -fno-specialise
      -fno-strictness
      -fobject-code       
      -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      ENCS.Main
    other-modules:
      ENCS.Opts
    build-depends:
      base                          >= 4.9 && < 5,
      aeson                                  -any,
      cardano-server                         -any,
      encs                                   -any,
      exceptions                             -any,
      mtl                                    -any,
      optparse-applicative                   -any,
      plutus-ledger-api                      -any,
      servant-server                         -any,
      text                                   -any,

    hs-source-dirs: src

executable encsDistributionApp
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: 
    base                          >= 4.9 && < 5,
    encs-distribution-app                      ,